--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <br>
 <br>
 
-<button style="width: 30%;" class="btn btn-primary" onclick="addUser()">Login</button>
+<button id="button" style="width: 20%;" class="btn btn-primary" onclick="addUser()">Login</button>
 </center>
 </body>
 </html>
