--- a/quiz_game_page.html
+++ b/quiz_game_page.html
@@ -1,42 +1,41 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Math Quiz Game</title>
-
+	<title>Math Quiz</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="quiz_game.css">
 </head>
 <body>
-
-	<h4 id="player1_name"></h4>
-	<span id="player1_score"></span>
+	<h4 id="player1_name" style="color: bisque; text-decoration: none; font-family: none;"></h4> <span id="player1_score"></span>
 	<br>
-	<h4 id="player2_name"></h4>
-	<span id="player2_name"></span>
-
-<div id="gamepage" class="container">
+	<h4 id="player2_name" style="color: bisque; text-decoration: none; font-family: none;"></h4> <span id="player2_score"></span>
+	<div class="container">
+<div style = "color: white;"container">
 	<center>
-		<h2 style="color: white;">Math Quiz!</h2>
-<h3 id="player_question">Question: Player 1</h3>
-<h3 id="player_answer">Answer: Player 2</h3>
-<div id="output" class="col-lg-6"></div>
-
+		<h2 style="color: white; font-family: 'Comic Sans', cursive; font-size: 50px;">Math Quiz!</h2>
+		<h3 id="player_question" style="font-family: 'Comic Sans'; color: black;">Question Turn:</h3>
+		<h3 id="player_answer" style="font-family: 'Comic Sans'; color: black;">Answer Turn:</h3>
 		<br>
 		<br>
-
-		<label>Question Number 1 <b style="color: red"></b></label>
-
+		<div id="output" class="col-lg-6"></div>
 		<br>
-<input type="text" id="word" class="form-control" placeholder="Add your Question">
-<br>
-<button onclick="send()" class="btn btn-success" style="width: 30%">Send Question</button>
+		<h4>Number 1</h4>
+		<input type="number" class="form-control" id="number_1" placeholder="Number 1" style="width: 30%;">
+		<h4>Number 2</h4>
+		<input type="number" class="form-control" id="number_2" placeholder="Number 2" style="width: 30%;">
+		<br>
+		<button onclick="send()" style="width: 20%; background-color: aquamarine; color: black; font-weight: bold; border-radius: 5px;" class="btn btn-link">Send</button>
+		<div id="output"></div>
 	</center>
 </div>
-
-<script src="game_page.js"></script>
+<script src="quiz_game.js"></script>
 </body>
 </html>
